--- a/ghcjs-vdom.cabal
+++ b/ghcjs-vdom.cabal
@@ -50,7 +50,8 @@ library
                        ghcjs-base,
                        ghcjs-prim,
                        split,
-                       template-haskell
+                       template-haskell,
+                       text
   hs-source-dirs:      src
   default-language:    Haskell2010
 
